* have API functions return 0 if value is not a valid date and time ?
* implement support for duration string

FAT date and time
* implement individual fat_date and fat_time support

Filetime

HFS date/time
* implement

NSF timedate
* add API functions

Unix timestamp
* implement 32-bit and 64-bit versions

Deployment
* update manuals
* add macosx file
* add debian files

20110703
* updated configure.ac
* changes for: warning: AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body
* updated common, libcstring
* code clean up
* worked on support for micro seconds

20110103
* updated configure
* updated libcstring
* 2011 update

20101203
* updated common, liberror
* code clean up
* libfdatetime_filetime_copy_to_date_time_values added century loop

20101127
* added const to copy for byte stream functions
* updated configure.ac
* updated include/error.h, include/types.h
* updated common, libcstring, liberror

20100825
* code cleanup

20100727
* updated include/error.h, liberror
* changed copy_from_uint64 to copy_from_64bit

20100721
* updated include/error.h, liberror
* updated common

20100713
* updated include/error.h, liberror

20100706
* updated common

20100628
* added extern definitions

20100627
* updated common, liberror, libcstring
* clean up

20100625
* fix in fallback print

20100624
* small changes

20100505
* updated configure.ac and added MAINTAINERCLEANFILES to Makefile.am files

20100502
* updated common, libcstring, liberror
* changed amount of in number of

20100416
* updated liberror

20100328
* added libcstring
* updated liberror
* removed common/narrow_string.h common/wide_string.h
* worked on libcstring support
* worked on msvscpp and codegear support

20100321
* small changes for msvscpp compilation

20100319
* worked on NSF timedate
* clean up of configure.ac

20100222
* email update
* updated common, liberror

20100105
* base16 fix

20100103
* 2010 update
* updated common, liberror
* removed macosx files (for now)
* updated include/types.h
