@@ -1,0 +1,1 @@
+# List of source files which contain translatable strings.
